[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pondereplay"
version = "0.1.0"
description = "CLI tool to replay Ethereum transactions with patched contract bytecode using Foundry"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "PonDeReplay Contributors"}]

dependencies = [
    "web3>=6.0.0",
    "click>=8.0.0",
    "python-dotenv>=0.19.0",
    "requests>=2.28.0",
]

[project.scripts]
pondereplay = "pondereplay.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.900",
]
